# SourceVortexPanelMethod

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  airfoil.cpp  airfoil.hpp  main.cpp  panel.cpp  panel.hpp  point.cpp  point.hpp  profiledeserializer.cpp  profiledeserializer.hpp  stackworkspace.hpp
